# tus-usecase

./: .gitignore  README.md  docker-compose.yml  env.example  pyproject.toml
app/: main.py
app/api/v1/: files.py  health.py  webhook.py
app/core/: config.py  logger.py  minio_client.py
app/models/: webhook.py
app/services/: hook_handlers.py  metadata_service.py  webhook_service.py
clients/golang/: go.mod  upload_client.go
clients/golang/examples/: chunked_upload.go  simple_upload.go
clients/python/: requirements.txt  upload_client.py
clients/python/examples/: chunked_upload.py  simple_upload.py
docs/: clients.md  hooks.md  setup.md
examples/: README.md
examples/full-demo/: docker-compose.yml  nginx.conf
examples/full-demo/web/: index.html
go-tus-cli/: Makefile  README.md  go.mod  go.sum  main.go  main_test.go  test_resume.sh
go-tus-cli/v1/: Makefile  README.md  go.mod  main.go  main_test.go
public/: index.html  uppy.min.css  uppy.min.js
server/: docker-compose.yml
server/config/: tusd.conf
server/hooks/: post-create  post-finish  pre-create  pre-finish
storage/aliyun-oss/: config.example.json
storage/minio/: docker-compose.yml
